--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,14 @@ dependencies {
     debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
     releaseApi 'com.readystatesoftware.chuck:library-no-op:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    implementation 'com.chaos.view:pinview:1.4.4'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
 }
 repositories {
     mavenCentral()
