--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
+        <activity android:name=".activities.AccountSecurityActivity"></activity>
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:theme="@style/Theme.Ecommerce.NoActionBar" />
         <activity
             android:name=".activities.RegisterActivity"
             android:theme="@style/Theme.Ecommerce.NoActionBar"
