--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
-        <activity android:name=".activities.AddShippingAddressActivity"
-            android:theme="@style/Theme.Ecommerce.Theme"/>
+        <activity android:name=".activities.ViewCategoryActivity"
+            android:parentActivityName=".activities.MainActivity"/>
+        <activity
+            android:name=".activities.AddShippingAddressActivity"
+            android:theme="@style/Theme.Ecommerce.Theme" />
         <activity android:name=".activities.MyAddressActivity" />
         <activity
             android:name=".activities.ConnectToUsActivity"
