--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
-        <activity android:name=".activities.FAQActivity"/>
+        <activity
+            android:name=".activities.wishlist.WishListActivity"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".activities.FAQActivity" />
         <activity
             android:name=".activities.ViewCategoryActivity"
             android:parentActivityName=".activities.MainActivity" />
@@ -26,13 +30,14 @@
             android:name=".activities.AddShippingAddressActivity"
             android:theme="@style/Theme.Ecommerce.Theme" />
         <activity android:name=".activities.MyAddressActivity" />
-        <activity android:name=".activities.MyOrdersActivity" />
+        <activity android:name=".activities.myorders.MyOrdersActivity" />
         <activity
             android:name=".activities.ConnectToUsActivity"
             android:theme="@style/Theme.Ecommerce.NoActionBar" />
         <activity android:name=".activities.AccountSecurityActivity" />
-        <activity android:name=".activities.SettingsActivity"
-            android:theme="@style/Theme.Ecommerce.Theme"/>
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:theme="@style/Theme.Ecommerce.Theme" />
         <activity
             android:name=".activities.RegisterActivity"
             android:theme="@style/Theme.Ecommerce.Theme"
