--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
+        <activity android:name=".activities.UpdateAddressActivity"
+            android:theme="@style/Theme.Ecommerce.Theme"/>
         <activity
             android:name=".activities.wishlist.WishListActivity"
             android:parentActivityName=".activities.MainActivity"
