--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,9 @@
         <activity
             android:name=".activities.coupons.CouponsActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity
-            android:name=".activities.SingleProductActivity"
-            android:theme="@style/Theme.Ecommerce.Theme" />
+<!--        <activity-->
+<!--            android:name=".activities.SingleProductActivity"-->
+<!--            android:theme="@style/Theme.Ecommerce.Theme" />-->
         <activity
             android:name=".activities.UpdateAddressActivity"
             android:theme="@style/Theme.Ecommerce.Theme" />
