--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
         <activity
+            android:name=".activities.shoppingbag.ShoppingBagActivity"
+            android:parentActivityName=".activities.MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
             android:name=".activities.search.SearchActivity"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
