--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
     releaseApi 'com.readystatesoftware.chuck:library-no-op:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    //Circular images
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.chaos.view:pinview:1.4.4'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
