--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
+        <activity android:name=".activities.SeeMoreProductsActivity"></activity>
         <activity
             android:name=".activities.shoppingbag.ShoppingBagActivity"
             android:parentActivityName=".activities.MainActivity"
