--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
+        <activity android:name=".activities.CheckoutActivity"></activity>
         <activity
             android:name=".activities.recentlyviewed.RecentlyViewedActivity"
             android:parentActivityName=".activities.MainActivity"
