added todo's and minor changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,7 +103,7 @@
         </provider>
 
         <service
-            android:name=".firebaseConfig.NotificationService"
+            android:name=".notis.NotificationService"
             android:directBootAware="true"
             android:exported="false">
             <intent-filter>
