--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,34 +16,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
-        <activity android:name=".activities.CheckoutActivity"></activity>
+        <activity android:name=".activities.PlaceOrderActivity"></activity>
         <activity
-            android:name=".activities.recentlyviewed.RecentlyViewedActivity"
+            android:name=".activities.RecentlyViewedActivity"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".activities.SeeMoreProductsActivity" />
         <activity
-            android:name=".activities.shoppingbag.ShoppingBagActivity"
+            android:name=".activities.ShoppingBagActivity"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name=".activities.search.SearchActivity"
+            android:name=".activities.SearchActivity"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
-            android:name=".activities.giftcard.GiftCardActivity"
+            android:name=".activities.GiftCardActivity"
             android:theme="@style/Theme.Ecommerce.Theme" />
         <activity
             android:name=".activities.SingleProductActivity"
             android:theme="@style/Theme.Ecommerce.Theme" />
         <activity
-            android:name=".activities.coupons.CouponsActivity"
+            android:name=".activities.CouponsActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".activities.UpdateAddressActivity"
             android:theme="@style/Theme.Ecommerce.Theme" />
         <activity
-            android:name=".activities.wishlist.WishListActivity"
+            android:name=".activities.WishListActivity"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".activities.FAQActivity" />
@@ -59,7 +59,7 @@
             android:theme="@style/Theme.Ecommerce.Theme" />
         <activity android:name=".activities.MyAddressActivity" />
         <activity
-            android:name=".activities.myorders.MyOrdersActivity"
+            android:name=".activities.MyOrdersActivity"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
