--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
-        <activity android:name=".activities.PlaceOrderActivity"></activity>
+        <activity android:name=".activities.NotificationActivity"></activity>
+        <activity android:name=".activities.PlaceOrderActivity" />
         <activity
             android:name=".activities.RecentlyViewedActivity"
             android:parentActivityName=".activities.MainActivity"
