--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,8 @@ dependencies {
     implementation 'com.github.amarjain07:StickyScrollView:1.0.2'
 
     implementation 'com.google.firebase:firebase-messaging'
+
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.gms.google-services'
