--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".activities.SearchActivity"
-            android:parentActivityName=".activities.MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:parentActivityName=".activities.MainActivity"/>
         <activity
             android:name=".activities.GiftCardActivity"
             android:theme="@style/Theme.Ecommerce.Theme" />
