--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
-        <activity android:name=".activities.NotificationActivity"></activity>
+        <activity android:name=".activities.NotificationActivity"/>
         <activity android:name=".activities.PlaceOrderActivity" />
         <activity
             android:name=".activities.RecentlyViewedActivity"
@@ -32,10 +32,10 @@
             android:parentActivityName=".activities.MainActivity"/>
         <activity
             android:name=".activities.GiftCardActivity"
-            android:theme="@style/Theme.Ecommerce.Theme" />
+            android:theme="@style/Theme.Ecommerce" />
         <activity
             android:name=".activities.SingleProductActivity"
-            android:theme="@style/Theme.Ecommerce.Theme" />
+            android:theme="@style/Theme.Ecommerce" />
         <activity
             android:name=".activities.CouponsActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
@@ -68,7 +68,7 @@
         <activity android:name=".activities.AccountSecurityActivity" />
         <activity
             android:name=".activities.SettingsActivity"
-            android:theme="@style/Theme.Ecommerce.Theme" />
+            android:theme="@style/Theme.Ecommerce" />
         <activity
             android:name=".activities.RegisterActivity"
             android:theme="@style/Theme.Ecommerce.Theme"
